# strands-agents-langfuse-evaluations

./: .env.example  .gitignore  PLAN.md  README.md  REVIEW.md  docker-compose-langfuse.yml  docker-compose.yml  index.html  pyproject.toml
.doc/: SLIDES.md
.github/: dependabot.yml
.github/workflows/: ci.yml  slides.yml
evals/langfuse/: create_annotation_queue.py  create_dataset.py  create_prompt.py  run_experiment.py  setup_annotation_queue.py  setup_online_evaluations.py
evals/strands/: run_evaluations.py
src/banking_sentinel/: agent.py  api.py  data.py  knowledge_base.py  models.py  tools.py
static/: chat.html  index.html
tests/: test_data.py  test_tools.py
