[project]
name = "banking-sentinel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "strands-agents[ollama,gemini,otel]",
    "strands-agents-tools",
    "strands-agents-evals",
    "langfuse",
    "fastapi",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/banking_sentinel"]

[tool.pytest.ini_options]
testpaths = ["evals"]
asyncio_mode = "auto"
