[project]
name = "banking-sentinel"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "strands-agents[ollama,gemini,otel]==1.42.0",
    "strands-agents-tools==0.8.2",
    "langfuse==4.7.1",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "pydantic==2.13.4",
    "python-dotenv==1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.3",
    "pytest-asyncio==1.4.0",
]
evals = [
    "strands-agents-evals==0.2.1",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/banking_sentinel"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
